--- a/index.html
+++ b/index.html
@@ -33,9 +33,16 @@
         </div>
       </nav>
 
+      <div class="row mt-5"></div>
+      <div class="row mt-5"></div>
+      <div class="row mt-5"></div>
+      <div class="row mt-5"></div>
+
+      
+
       <div class="containercentral">
         <div class="row justify-content-center">
-          <div class="card" style="width: 18rem">
+          <div class="" style="width: 18rem">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -43,11 +50,11 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <button type="button" class="btn btn-outline-success">Success</button>
             </div>
           </div>
 
-          <div class="card" style="width: 18rem">
+          <div class="" style="width: 18rem">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -55,11 +62,11 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <button type="button" class="btn btn-outline-warning">Warning</button>
             </div>
           </div>
 
-          <div class="card" style="width: 18rem">
+          <div class="" style="width: 18rem">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -67,7 +74,7 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <button type="button" class="btn btn-outline-info">Info</button>
             </div>
           </div>
         </div>
