--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto2</title>
+    <title>PizzaNature</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body>
+  <body class="pagina1">
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -61,14 +61,12 @@
         <div class="col-4 ms-3">
           <div class="col-4" style="width: 18rem">
             <div class="card-body ms-5">
-              <h5 class="card-title text-light">CARTA</h5>
+              <h5 class="card-title text-light">CARTA</h5> 
               <p class="card-text text-light">
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <button type="button" class="btn btn-outline-info">
-                ECHA UN OJO!
-              </button>
+              <a class="btn btn-outline-info" href="./carta.html" role="button">ECHA UN OJO!</a>
             </div>
           </div>
 
