Añado columnas e imagenes de entrantes principales, añado radius

--- a/carta.html
+++ b/carta.html
@@ -18,7 +18,31 @@
 </head>
 
     <body class="pagina2">
-       
+	<div class="container">
+		<h3 class="text-center text-light">NUESTRA CARTA</h3>
+
+		<div class="row text-light">
+			<div class="col4-md-6 mt-5">
+				<h3>Para hacer hambre</h3>
+				<div class="row">
+					<div class="col-md-3 mt-5 ">
+						<img src="/img/Bravas.jpg" alt="Bravas" class="img-fluid rounded-circle">
+                        <h3>Bravas</h3>
+					</div>
+					<div class="col-md-3 mt-5">
+						<img src="/img/ensalada de fresas.jpg" alt="Cóctel 2" class="img-fluid rounded-circle">
+                        <h3>Ensalada de fresas</h3>
+					</div>
+					<div class="col-md-3 mt-5">
+						<img src="..." alt="Cóctel 3" class="img-fluid rounded-circle">
+                        <h3></h3>
+					</div>
+					<div class="col-md-3 mt-5">
+						<img src="..." alt="Cóctel 4" class="img-fluid rounded-circle">
+					</div>
+				</div>
+			</div>
+
 
 
 
