--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
+          <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="Logo" width="130" height="130" class="d-inline-block align-text-top rounded-circle ms-5">
           <a class="navbar-brand text-success ms-5 mt-4" href="#"
-            ><h1>PizzaNature</h1></a
+            ></a
           >
           <button
             class="navbar-toggler"
@@ -108,6 +109,7 @@
           <a class="nav-link text-light" href="#">Contacto</a>
         </li>
       </ul>
+      
       
     </div>
   </body>
