--- a/carta.html
+++ b/carta.html
@@ -72,6 +72,17 @@
                         </div>
                     </div>
                 </div>
+                <ul class="nav justify-content-end mt-5 ">
+                    <li class="nav-item">
+                      <a class="nav-link active text-light" aria-current="page" href="/index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light" href="#">Reservas</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light" href="#">Contacto</a>
+                    </li>
+                  </ul>
 
         </div>
 
