--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
               </li>
             </ul>
           </div>
+        </nav>
         </div>
-      </nav>
+      
 
       <div class="row mt-5"></div>
 
@@ -106,7 +107,7 @@
           <a class="nav-link text-light" href="#">Compromiso</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Contacto</a>
+          <a class="nav-link text-light" href="./contacto.html">Contacto</a>
         </li>
       </ul>
       
