Añado navbar inferior y termino pagina contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg">
               <div class="container-fluid">
-                <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="Logo" width="130" height="130" class="d-inline-block align-text-top rounded-circle ms-5">
+                <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="Logo" width="130" height="130" class="d-inline-block align-text-top rounded-circle ms-2">
                 <a class="navbar-brand text-success ms-5 mt-4" href="#"
                   ></a
                 >
@@ -56,15 +56,27 @@
                   </ul>
                 </div>
               </nav>
+              <h3 class="text-center text-decoration-underline text-light mt-5">SUGERENCIAS</h3>
               </div>
               <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <label for="exampleFormControlInput1" class="form-label text-light">Dirección de correo</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
               <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                <label for="exampleFormControlTextarea1" class="form-label text-light">Cuentanos!</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
+              <ul class="nav justify-content-center mt-5">
+                <li class="nav-item">
+                  <a class="nav-link active text-light" aria-current="page" href="/index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-light" href="#">Reservas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-light" href="#">Contacto</a>
+                </li>
+              </ul>
 
 
     </div>
