añado pagina reservas.html y empiezo formulario

--- a/carta.html
+++ b/carta.html
@@ -107,7 +107,7 @@
                         </div>
                         <div class="col-md-3 mt-5">
                             <img src="https://entrenosotros.consum.es/public/Image/2022/7/refrescos_Mediano.jpg" alt="" class="img-fluid rounded-3">
-                            <h5><b>Refrescos</b></h5>
+                            <h5><b>Bebidas azucaradas</b></h5>
                         </div>
                         <div class="col-md-3 mt-5">
                             <img src="https://images.ecestaticos.com/pzJWsWUrRKnUXeydGCBs-DVn6lE=/210x22:1378x898/1200x900/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2F9c7%2Ff99%2F637%2F9c7f99637fdb6f5400fd7bd6d8af3aa0.jpg" alt="" class="img-fluid rounded-3">
@@ -129,7 +129,7 @@
                       <a class="nav-link text-black" href="#">Reservas</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-black" href="#">Contacto</a>
+                      <a class="nav-link text-black" href="./contacto.html">Contacto</a>
                     </li>
                   </ul>
                   
