--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <button type="button" class="btn btn-outline-success">
-                RESERVA!
-              </button>
+              <a class="btn btn-outline-success" href="./reservas.html" role="button">RESERVA!</a>
             </div>
           </div>
 
