añado y modifico formulario, añado boton enviar, y navbar inferior, hipervinculo todas las paginas

--- a/contacto.html
+++ b/contacto.html
@@ -71,10 +71,10 @@
                   <a class="nav-link active text-light" aria-current="page" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="#">Reservas</a>
+                  <a class="nav-link text-light" href="./reservas.html">Reservas</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="#">Contacto</a>
+                  <a class="nav-link text-light" href="./contacto.html">Contacto</a>
                 </li>
               </ul>
 
