--- a/carta.html
+++ b/carta.html
@@ -126,7 +126,7 @@
                       <a class="nav-link active text-black" aria-current="page" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link text-black" href="#">Reservas</a>
+                      <a class="nav-link text-black" href="./reservas.html">Reservas</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-black" href="./contacto.html">Contacto</a>
