añado pagina compromiso.html, añado logotipo y slide

--- a/contacto.html
+++ b/contacto.html
@@ -56,10 +56,10 @@
                   </ul>
                 </div>
               </nav>
-              <h3 class="text-center text-decoration-underline text-light mt-5">SUGERENCIAS</h3>
+              <h3 class="text-center text-decoration-underline text-light mt-4">SUGERENCIAS</h3>
               </div>
               <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label text-light">Dirección de correo</label>
+                <label for="exampleFormControlInput1" class="form-label text-light mt-4">Dirección de correo</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
               <div class="mb-3">
@@ -67,13 +67,13 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
               <ul class="nav justify-content-center mt-5">
-                <li class="nav-item">
+                <li class="nav-item mt-4">
                   <a class="nav-link active text-light" aria-current="page" href="/index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mt-4">
                   <a class="nav-link text-light" href="./reservas.html">Reservas</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mt-4">
                   <a class="nav-link text-light" href="./contacto.html">Contacto</a>
                 </li>
               </ul>
