--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <a class="nav-link active text-light" aria-current="page" href="#">Idiomas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Compromiso</a>
+          <a class="nav-link text-light" href="./compromiso.html">Compromiso</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-light" href="./contacto.html">Contacto</a>
