--- a/reservas.html
+++ b/reservas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indareservas</title>
+    <title>IndaReservas</title>
 
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -27,8 +27,8 @@
               </a>
             </div>
           </nav>
-          <h3 class="text-center text-decoration-underline text-light">RESERVAS</h3>
-          <form class="row g-3 mt-5">
+          <h3 class="text-center text-decoration-underline text-light mt-3">RESERVAS</h3>
+          <form class="row g-3 mt-2">
             <div class="col-auto">
               <label for="staticEmail2" class="visually-hidden">Email</label>
               <input type="text" readonly class="form-control-plaintext text-light" id="staticEmail2" value="">
@@ -68,7 +68,7 @@
               <input type="password" class="form-control" id="inputPassword2" placeholder="Fecha (dd/mm/aa)">
             </div>
             <div class="col-auto">
-              <button type="submit" class="btn btn-primary mb-3">Enviar</button>
+              <button type="submit" class="btn btn-primary mb-3 ">Enviar</button>
             </div>
           </form>
           <ul class="col4 nav justify-content-center mt-5">
