añado pagina quienessomos.html, vinculo logotipo

--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
                 Some quick example text to build on the card title and make up
                 the bulk of the card's content.
               </p>
-              <button type="button" class="btn btn-outline-warning">
-                CONOCENOS!
-              </button>
+              <a class="btn btn-outline-warning" href="./quienessomos.html" role="button">VEN A CONOCERNOS!</a>
             </div>
           </div>
         </div>
