añado imagenes local, texto presentacion, navbar inferior y linkeo todos los logotipos de todas las paginas

--- a/reservas.html
+++ b/reservas.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
         <nav class="navbar">
             <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="./index.html">
                 <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="" width="130" height="130" class="d-inline-block rounded-circle">
                 
               </a>
