--- a/compromiso.html
+++ b/compromiso.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
       <nav class="navbar">
         <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="./index.html">
             <img
               src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
               alt=""
