--- a/contacto.html
+++ b/contacto.html
@@ -1,90 +1,78 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IndaContacto</title>
 
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-    crossorigin="anonymous"
-  />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
 
-  <link rel="stylesheet" href="./css/styles.css" />
-</head>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<body class="pagina3">
+  <body class="pagina3">
     <div class="container-fluid">
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg">
-              <div class="container-fluid">
-                <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="Logo" width="130" height="130" class="d-inline-block align-text-top rounded-circle ms-2">
-                <a class="navbar-brand text-success ms-5 mt-4" href="#"
-                  ></a
-                >
-                <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent"
-                  aria-expanded="false"
-                  aria-label="Toggle navigation"
-                ></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a
-                        class="nav-link active text-light"
-                        aria-current="page"
-                        href="#"
-                        ></a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-light" href="#"></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-light" href="#"></a>
-                    </li>
-                     
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-              <h3 class="text-center text-decoration-underline text-light mt-4">SUGERENCIAS</h3>
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label text-light mt-4">Dirección de correo</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label text-light">Cuentanos!</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-              <ul class="nav justify-content-center mt-5">
-                <li class="nav-item mt-4">
-                  <a class="nav-link active text-light" aria-current="page" href="/index.html">Home</a>
-                </li>
-                <li class="nav-item mt-4">
-                  <a class="nav-link text-light" href="./reservas.html">Reservas</a>
-                </li>
-                <li class="nav-item mt-4">
-                  <a class="nav-link text-light" href="./contacto.html">Contacto</a>
-                </li>
-              </ul>
-
-
+      <div class="container-fluid">
+        <nav class="navbar">
+          <div class="container">
+            <a class="navbar-brand" href="./index.html">
+              <img
+                src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
+                alt=""
+                width="130"
+                height="130"
+                class="d-inline-block rounded-circle"
+              />
+            </a>
+          </div>
+        </nav>
+        <h3 class="text-center text-decoration-underline text-light mt-4">
+          SUGERENCIAS
+        </h3>
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label text-light mt-4"
+          >Dirección de correo</label
+        >
+        <input
+          type="email"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="name@example.com"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label text-light"
+          >Cuentanos!</label
+        >
+        <textarea
+          class="form-control"
+          id="exampleFormControlTextarea1"
+          rows="3"
+        ></textarea>
+      </div>
+      <ul class="nav justify-content-center mt-5">
+        <li class="nav-item mt-4">
+          <a
+            class="nav-link active text-light"
+            aria-current="page"
+            href="/index.html"
+            >Home</a
+          >
+        </li>
+        <li class="nav-item mt-4">
+          <a class="nav-link text-light" href="./reservas.html">Reservas</a>
+        </li>
+        <li class="nav-item mt-4">
+          <a class="nav-link text-light" href="./contacto.html">Contacto</a>
+        </li>
+      </ul>
     </div>
-
-
-
-
-
-    
-</body>
+  </body>
 </html>
