Añado texto pagina principal, añado readme

--- a/reservas.html
+++ b/reservas.html
@@ -45,16 +45,6 @@
             </div>
             <div class="col-auto">
               <label for="inputPassword2" class="visually-hidden">Password</label>
-              <input type="password" class="form-control" id="inputPassword2" placeholder="Email">
-            </div>
-          </form>
-          <form class="row g-3 mt-2">
-            <div class="col-auto">
-              <label for="staticEmail2" class="visually-hidden">Email</label>
-              <input type="text" readonly class="form-control-plaintext text-light" id="staticEmail2" value="">
-            </div>
-            <div class="col-auto">
-              <label for="inputPassword2" class="visually-hidden">Password</label>
               <input type="password" class="form-control" id="inputPassword2" placeholder="Teléfono">
             </div>
           </form>
@@ -65,7 +55,17 @@
             </div>
             <div class="col-auto">
               <label for="inputPassword2" class="visually-hidden">Password</label>
-              <input type="password" class="form-control" id="inputPassword2" placeholder="Fecha (dd/mm/aa)">
+              <input type="password" class="form-control" id="inputPassword2" placeholder="Número de comensales">
+            </div>
+          </form>
+          <form class="row g-3 mt-2">
+            <div class="col-auto">
+              <label for="staticEmail2" class="visually-hidden">Email</label>
+              <input type="text" readonly class="form-control-plaintext text-light" id="staticEmail2" value="">
+            </div>
+            <div class="col-auto">
+              <label for="inputPassword2" class="visually-hidden">Password</label>
+              <input type="password" class="form-control" id="inputPassword2" placeholder="Fecha y hora (dd/mm/aa)">
             </div>
             <div class="col-auto">
               <button type="submit" class="btn btn-primary mb-3 ">Enviar</button>
