--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <div class="card-body ms-5">
               <h5 class="card-title text-light">CARTA</h5> 
               <p class="card-text text-light">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                ¿Buscas una manera divertida y sabrosa de disfrutar con tus amigos?
+                Nuestras tapas son perfectas para compartir y probar varias opciones. ¡Ven y disfruta de una noche de tapas con tus amigos!
               </p>
               <a class="btn btn-outline-info" href="./carta.html" role="button">ECHA UN OJO!</a>
             </div>
@@ -76,8 +76,7 @@
             <div class="card-body ms-5">
               <h5 class="ms-auto card-title text-light">RESERVAS</h5>
               <p class="card-text text-light">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Con nuestra página de reservas en línea, puedes hacer una reserva en cualquier momento y desde cualquier lugar. Simplemente selecciona la fecha y hora deseada, el número de personas y estaremos listos para recibirte.
               </p>
               <a class="btn btn-outline-success" href="./reservas.html" role="button">RESERVA!</a>
             </div>
@@ -87,8 +86,7 @@
             <div class="card-body ms-5">
               <h5 class="ms-auto card-title text-light">QUIENES SOMOS</h5>
               <p class="card-text text-light">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+                Nuestro objetivo es proporcionar una experiencia culinaria auténtica y sin pretensiones. ¡Ven y disfruta de la sencillez y el sabor en nuestro local de tapas!
               </p>
               <a class="btn btn-outline-warning" href="./quienessomos.html" role="button">VEN A CONOCERNOS!</a>
             </div>
