cambio imagenes y fondo principal

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -27,14 +27,14 @@
         </nav>
 		<h3 class="text-center text-decoration-underline">NUESTRA CARTA</h3>
 		<div class="row">
-			<div class="col-md-10 mt-5 ms-5">
+			<div class="col-md-11 mt-5 ">
 				<div class="row">
 					<div class="col-md-3 mt-5">
-						<img src="/img/Bravas.jpg" alt="" class="img-fluid rounded-3">
+						<img src="https://thumbs.dreamstime.com/b/bravas-espa%C3%B1oles-de-los-patatas-del-tapa-53704408.jpg" alt="" class="img-fluid rounded-3">
                         <h5><b>Bravas 5€</b></h5>
 					</div>
 					<div class="col-md-3 mt-5">
-						<img src="/img/ensalada de fresas.jpg" alt="" class="img-fluid rounded-3">
+						<img src="https://i.ytimg.com/vi/ivAvBmuqm5Y/maxresdefault.jpg" alt="" class="img-fluid rounded-3">
                         <h5><b>Ensalada de fresas 5.5€</b></h5>
 					</div>
 					<div class="col-md-3 mt-5">
@@ -47,7 +47,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-10 mt-5 ms-5">
+			<div class="col-md-11 mt-5">
 				<div class="row">
 					<div class="col-md-3 mt-5">
 						<img src="https://images.hola.com/imagenes/cocina/recetas/20220902216362/ensalada-espinacas-pollo-manzana/1-132-533/espinacas-manzana-adobe-t.jpg?tx=w_680" alt="" class="img-fluid rounded-3">
