--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -1,101 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IndaReservas</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>IndaReservas</title>
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+    crossorigin="anonymous"
+  />
 
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body class="pagina4">
-    <div class="container-fluid">
-      <nav class="navbar">
-        <div class="container">
-          <a class="navbar-brand" href="./index.html">
-            <img
-              src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
-              alt=""
-              width="130"
-              height="130"
-              class="d-inline-block rounded-circle"
-            />
-          </a>
-        </div>
-      </nav>
-      <h3 class="text-center text-decoration-underline text-light mt-3">
-        RESERVAS
-      </h3>
-      <form class="row g-3 mt-2">
-        <div class="col-auto">
-          <label for="staticEmail2" class="visually-hidden">Email</label>
-          <input
-            type="text"
-            readonly
-            class="form-control-plaintext text-light"
-            id="staticEmail2"
-            value=""
+  <link rel="stylesheet" href="/css/styles.css" />
+</head>
+<body class="pagina4">
+  <div class="container-fluid">
+    <nav class="navbar">
+      <div class="container">
+        <a class="navbar-brand" href="./index.html">
+          <img
+            src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
+            alt=""
+            width="130"
+            height="130"
+            class="d-inline-block rounded-circle"
           />
-        </div>
-        <div class="col-auto">
-          <label for="inputPassword2" class="visually-hidden">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="inputPassword2"
-            placeholder="Nombre y apellido"
-          />
-        </div>
-      </form>
-      <form class="row g-3 mt-2">
-        <div class="col-auto">
-          <label for="staticEmail2" class="visually-hidden">Email</label>
-          <input
-            type="text"
-            readonly
-            class="form-control-plaintext text-light"
-            id="staticEmail2"
-            value=""
-          />
-        </div>
-        <div class="col-auto">
-          <label for="inputPassword2" class="visually-hidden">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="inputPassword2"
-            placeholder="Teléfono"
-          />
-        </div>
-      </form>
-      <form class="row g-3 mt-2">
-        <div class="col-auto">
-          <label for="staticEmail2" class="visually-hidden">Email</label>
-          <input
-            type="text"
-            readonly
-            class="form-control-plaintext text-light"
-            id="staticEmail2"
-            value=""
-          />
-        </div>
-        <div class="col-auto">
-          <label for="inputPassword2" class="visually-hidden">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="inputPassword2"
-            placeholder="Número de comensales"
-          />
-        </div>
-      </form>
+        </a>
+      </div>
+    </nav>
+    <h3 class="text-center text-decoration-underline text-light mt-3">
+      RESERVAS
+    </h3>
+    <form class="row g-3 mt-2">
+      <div class="col-md-auto">
+        <label for="staticEmail2" class="visually-hidden">Email</label>
+        <input
+          type="text"
+          readonly
+          class="form-control-plaintext text-light"
+          id="staticEmail2"
+          value=""
+        />
+      </div>
+      <div class="col-md-auto">
+        <label for="inputPassword2" class="visually-hidden">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="inputPassword2"
+          placeholder="Nombre y apellido"
+        />
+      </div>
+    </form>
+    <form class="row g-3 mt-2">
+      <div class="col-md-auto">
+        <label for="staticEmail2" class="visually-hidden">Email</label>
+        <input
+          type="text"
+          readonly
+          class="form-control-plaintext text-light"
+          id="staticEmail2"
+          value=""
+        />
+      </div>
+      <div class="col-md-auto">
+        <label for="inputPassword2" class="visually-hidden">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="inputPassword2"
+          placeholder="Teléfono"
+        />
+      </div>
+    </form>
+    <form class="row g-3 mt-2">
+      <div class="col-md-auto">
+        <label for="staticEmail2" class="visually-hidden">Email</label>
+        <input
+          type="text"
+          readonly
+          class="form-control-plaintext text-light"
+          id="staticEmail2"
+          value=""
+        />
+      </div>
+      <div class="col-md-auto">
+        <label for="inputPassword2" class="visually-hidden">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="inputPassword2"
+          placeholder="Número de comensales"
+        />
+      </div>
+    </form
       <form class="row g-3 mt-2">
         <div class="col-auto">
           <label for="staticEmail2" class="visually-hidden">Email</label>
@@ -125,7 +125,7 @@
           <a
             class="nav-link active text-light"
             aria-current="page"
-            href="/index.html"
+            href="./index.html"
             >Home</a
           >
         </li>
