modifico enlace index y elimino container-fluid duplicado

--- a/pages/compromiso.html
+++ b/pages/compromiso.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body class="pagina5">
     <div class="container-fluid">
