--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,33 +13,29 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
   <body class="pagina3">
     <div class="container-fluid">
-      <div class="container-fluid">
-        <nav class="navbar">
-          <div class="container">
-            <a class="navbar-brand" href="./index.html">
-              <img
-                src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
-                alt=""
-                width="130"
-                height="130"
-                class="d-inline-block rounded-circle"
-              />
-            </a>
-          </div>
-        </nav>
-        <h3 class="text-center text-decoration-underline text-light mt-4">
-          SUGERENCIAS
-        </h3>
-      </div>
+      <nav class="navbar">
+        <div class="container">
+          <a class="navbar-brand" href="./index.html">
+            <img
+              src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
+              alt=""
+              width="130"
+              height="130"
+              class="d-inline-block rounded-circle"
+            />
+          </a>
+        </div>
+      </nav>
+      <h3 class="text-center text-decoration-underline text-light mt-4">
+        SUGERENCIAS
+      </h3>
       <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label text-light mt-4"
-          >Dirección de correo</label
-        >
+        <label for="exampleFormControlInput1" class="form-label text-light mt-4">Dirección de correo</label>
         <input
           type="email"
           class="form-control"
@@ -48,9 +44,7 @@
         />
       </div>
       <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label text-light"
-          >Cuentanos!</label
-        >
+        <label for="exampleFormControlTextarea1" class="form-label text-light">Cuentanos!</label>
         <textarea
           class="form-control"
           id="exampleFormControlTextarea1"
@@ -59,12 +53,7 @@
       </div>
       <ul class="nav justify-content-center mt-5">
         <li class="nav-item mt-4">
-          <a
-            class="nav-link active text-light"
-            aria-current="page"
-            href="/index.html"
-            >Home</a
-          >
+          <a class="nav-link active text-light" aria-current="page" href="/index.html">Home</a>
         </li>
         <li class="nav-item mt-4">
           <a class="nav-link text-light" href="./reservas.html">Reservas</a>
@@ -75,4 +64,5 @@
       </ul>
     </div>
   </body>
+  
 </html>
