--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
       </div>
       <ul class="nav justify-content-center mt-5">
         <li class="nav-item mt-4">
-          <a class="nav-link active text-light" aria-current="page" href="/index.html">Home</a>
+          <a class="nav-link active text-light" aria-current="page" href="./index.html">Home</a>
         </li>
         <li class="nav-item mt-4">
           <a class="nav-link text-light" href="./reservas.html">Reservas</a>
