corrijo todos los enlaces entre paginas

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 ¿Buscas una manera divertida y sabrosa de disfrutar con tus amigos?
                 Nuestras tapas son perfectas para compartir y probar varias opciones. ¡Ven y disfruta de una noche de tapas con tus amigos!
               </p>
-              <a class="btn btn-outline-info" href="./carta.html" role="button">ECHA UN OJO!</a>
+              <a class="btn btn-outline-info" href="./pages/carta.html" role="button">ECHA UN OJO!</a>
             </div>
           </div>
 
@@ -78,7 +78,7 @@
               <p class="card-text text-light">
                 Con nuestra página de reservas en línea, puedes hacer una reserva en cualquier momento y desde cualquier lugar. Simplemente selecciona la fecha y hora deseada, el número de personas y estaremos listos para recibirte.
               </p>
-              <a class="btn btn-outline-success" href="./reservas.html" role="button">RESERVA!</a>
+              <a class="btn btn-outline-success" href="./pages/reservas.html" role="button">RESERVA!</a>
             </div>
           </div>
 
@@ -88,7 +88,7 @@
               <p class="card-text text-light">
                 Nuestro objetivo es proporcionar una experiencia culinaria auténtica y sin pretensiones. ¡Ven y disfruta de la sencillez y el sabor en nuestro local de tapas!
               </p>
-              <a class="btn btn-outline-warning" href="./quienessomos.html" role="button">VEN A CONOCERNOS!</a>
+              <a class="btn btn-outline-warning" href="./pages/quienessomos.html" role="button">VEN A CONOCERNOS!</a>
             </div>
           </div>
         </div>
@@ -98,10 +98,10 @@
           <a class="nav-link active text-light" aria-current="page" href="#">Idiomas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="./compromiso.html">Compromiso</a>
+          <a class="nav-link text-light" href="/pages/compromiso.html">Compromiso</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="./contacto.html">Contacto</a>
+          <a class="nav-link text-light" href="/pages/contacto.html">Contacto</a>
         </li>
       </ul>
       
