--- a/pages/carta.html
+++ b/pages/carta.html
@@ -13,14 +13,14 @@
     crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body class="pagina2">
 	<div class="container-fluid">
         <nav class="navbar">
             <div class="container">
-                <a class="navbar-brand" href="./index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="" width="130" height="130" class="d-inline-block rounded-circle">
                 </a>
             </div>
@@ -120,13 +120,13 @@
                 </div>
                 <ul class="nav justify-content-center mt-5 ">
                     <li class="nav-item">
-                    <a class="nav-link active text-black" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link active text-black" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link text-black" href="./reservas.html">Reservas</a>
+                    <a class="nav-link text-black" href="../pages/reservas.html">Reservas</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link text-black" href="./contacto.html">Contacto</a>
+                    <a class="nav-link text-black" href="../pages/contacto.html">Contacto</a>
                     </li>
                 </ul>
 
