--- a/pages/compromiso.html
+++ b/pages/compromiso.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body class="pagina5">
     <div class="container-fluid">
@@ -54,13 +54,13 @@
   
       <ul class="nav justify-content-center mt-5">
         <li class="nav-item">
-          <a class="nav-link active text-black" aria-current="page" href="./index.html"><b>Home</b></a>
+          <a class="nav-link active text-black" aria-current="page" href="../index.html"><b>Home</b></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-black" href="./reservas.html"><b>Reservas</b></a>
+          <a class="nav-link text-black" href="../pages/reservas.html"><b>Reservas</b></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-black" href="./contacto.html"><b>Contacto</b></a>
+          <a class="nav-link text-black" href="../pages/contacto.html"><b>Contacto</b></a>
         </li>
       </ul>
     </div>
