--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,14 +13,14 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
 
   <body class="pagina3">
     <div class="container-fluid">
       <nav class="navbar">
         <div class="container">
-          <a class="navbar-brand" href="./index.html">
+          <a class="navbar-brand" href="../index.html">
             <img
               src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
               alt=""
@@ -53,13 +53,13 @@
       </div>
       <ul class="nav justify-content-center mt-5">
         <li class="nav-item mt-4">
-          <a class="nav-link active text-light" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link active text-light" aria-current="page" href="../index.html">Home</a>
         </li>
         <li class="nav-item mt-4">
-          <a class="nav-link text-light" href="./reservas.html">Reservas</a>
+          <a class="nav-link text-light" href="../pages/reservas.html">Reservas</a>
         </li>
         <li class="nav-item mt-4">
-          <a class="nav-link text-light" href="./contacto.html">Contacto</a>
+          <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
         </li>
       </ul>
     </div>
