--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
 
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body class="pagina6">
   <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand" href="./index.html">
+        <a class="navbar-brand" href="../index.html">
           <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="" width="130"
             height="130" class="d-inline-block rounded-circle">
         </a>
@@ -55,13 +55,13 @@
 
     <ul class="nav justify-content-center mt-5 ">
       <li class="nav-item">
-      <a class="nav-link active text-light" aria-current="page" href="./index.html">Home</a>
+      <a class="nav-link active text-light" aria-current="page" href="../index.html">Home</a>
       </li>
       <li class="nav-item">
-      <a class="nav-link text-light" href="./reservas.html">Reservas</a>
+      <a class="nav-link text-light" href="../pages/reservas.html">Reservas</a>
       </li>
       <li class="nav-item">
-      <a class="nav-link text-light" href="./contacto.html">Contacto</a>
+      <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
       </li>
     </ul>
     
