--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IndaReservas</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
 </head>
 <body class="pagina4">
   <div class="container-fluid">
     <nav class="navbar">
       <div class="container">
-        <a class="navbar-brand" href="./index.html">
+        <a class="navbar-brand" href="../index.html">
           <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="" width="130" height="130" class="d-inline-block rounded-circle">
         </a>
       </div>
@@ -65,13 +65,13 @@
     </form>
     <ul class="col-12 col-md-4 nav justify-content-center mt-5">
       <li class="nav-item">
-        <a class="nav-link active text-light" aria-current="page" href="./index.html">Home</a>
+        <a class="nav-link active text-light" aria-current="page" href="../index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href="./reservas.html">Reservas</a>
+        <a class="nav-link text-light" href="../pages/reservas.html">Reservas</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href="./contacto.html">Contacto</a>
+        <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
       </li>
     </ul>
   </div>
