--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
 
   <body class="pagina1">
@@ -98,10 +98,10 @@
           <a class="nav-link active text-light" aria-current="page" href="#">Idiomas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="/pages/compromiso.html">Compromiso</a>
+          <a class="nav-link text-light" href="./pages/compromiso.html">Compromiso</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="/pages/contacto.html">Contacto</a>
+          <a class="nav-link text-light" href="./pages/contacto.html">Contacto</a>
         </li>
       </ul>
       
