--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
   </head>
-  <body class="pagina1">
-    <nav class="navbar navbar-dark bg-dark fixed-top">
+
+  <body class="pagina1 center">
+    <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="Logo" width="60" height="60" class="d-inline-block align-text-top rounded-circle ms-5">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="Logo" width="60" height="60" class="d-inline-block align-text-top rounded-circle ms-2">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,18 +30,21 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="./pages/quienessomos.html">Conocenos un poco mejor</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Carta
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Nuestros platos</a></li>
+                  <li><a class="dropdown-item" href="#">Cervezas</a></li>
+                  <li><a class="dropdown-item" href="#">Vinos</a></li>
+                  <li><a class="dropdown-item" href="#">Cocteles</a></li>
+                  <li><a class="dropdown-item" href="#">Postres</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
@@ -55,7 +59,6 @@
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-
           <a class="navbar-brand text-success ms-5 mt-4" href="#"
             ></a
           >
@@ -88,40 +91,10 @@
             </ul>
           </div>
       </nav>
-      <!-- <div class="row mt-5"></div>
-      <div class="containercentral justify-content-center">
-        <div class="col-4 ms-3">
-          <div class="col-4" style="width: 18rem">
-            <div class="card-body ms-5">
-              <h5 class="card-title text-light">CARTA</h5> 
-              <p class="card-text text-light">
-                ¿Buscas una manera divertida y sabrosa de disfrutar con tus amigos?
-                Nuestras tapas son perfectas para compartir y probar varias opciones. ¡Ven y disfruta de una noche de tapas con tus amigos!
-              </p>
-              <a class="btn btn-outline-info" href="./pages/carta.html" role="button">ECHA UN OJO!</a>
-            </div>
-          </div>
-          <div class="col-4 mt-5" style="width: 18rem">
-            <div class="card-body ms-5">
-              <h5 class="ms-auto card-title text-light">RESERVAS</h5>
-              <p class="card-text text-light">
-                Con nuestra página de reservas en línea, puedes hacer una reserva en cualquier momento y desde cualquier lugar. Simplemente selecciona la fecha y hora deseada, el número de personas y estaremos listos para recibirte.
-              </p>
-              <a class="btn btn-outline-success" href="./pages/reservas.html" role="button">RESERVA!</a>
-            </div>
-          </div>
-          <div class="col-4 mt-5" style="width: 18rem">
-            <div class="card-body ms-5">
-              <h5 class="ms-auto card-title text-light">QUIENES SOMOS</h5>
-              <p class="card-text text-light">
-                Nuestro objetivo es proporcionar una experiencia culinaria auténtica y sin pretensiones. ¡Ven y disfruta de la sencillez y el sabor en nuestro local de tapas!
-              </p>
-              <a class="btn btn-outline-warning" href="./pages/quienessomos.html" role="button">VEN A CONOCERNOS!</a>
-            </div>
-          </div>
-        </div>
+      <div class="logo-container">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="Logo" width="80" height="80" class="logo-image fade-in">
+        <p class="logo-text fade-in">Cocina de mercado</p>
       </div>
-    </div> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
       <div class="container">
         <div class="navbar-collapse justify-content-center" id="navbarNav">
