--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,6 +11,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body class="pagina3">
@@ -82,18 +83,18 @@
                   Carta
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="#">Nuestros platos</a></li>
-                  <li><a class="dropdown-item" href="#">Postres</a></li>
+                  <li><a class="dropdown-item" href="./carta.html">Nuestros platos</a></li>
+                  <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="#">Cervezas</a></li>
-                  <li><a class="dropdown-item" href="#">Vinos</a></li>
+                  <li><a class="dropdown-item" href="./cervezas.html">Cervezas</a></li>
+                  <li><a class="dropdown-item" href="./vinos.html">Vinos</a></li>
                   <li><a class="dropdown-item" href="#">Cocteles</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/quienessomos.html"
+                <a class="nav-link" href="./reservas.html"
                   >Reserva tu mesa</a
                 >
               </li>
