--- a/pages/postres.html
+++ b/pages/postres.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IndaSomos</title>
+    <title>IndaCarta</title>
     <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="pagina6">
+  <body class="pagina2 d-flex flex-column justify-content-center">
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a href="/index.html">
@@ -111,38 +111,114 @@
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
-      <h3 class="text-center text-decoration-underline mt-3 text-light">
-        Presentación
-      </h3>
-      <div class="row mt-5">
-        <div class="col-md-6 col-lg-4 custom-tile">
-          <img src="../img/streetFood.jpg" alt="" class="img-fluid rounded-3" />
-          <p class="textSomos">Texto explicativo para la imagen 1</p>
-        </div>
-        <div class="col-md-6 col-lg-4 custom-tile">
-          <img src="../img/hambur.jpg" alt="" class="img-fluid rounded-3" />
-          <p class="textSomos">Especialistas en burguers!</p>
-        </div>
-        <div class="col-md-6 col-lg-4 custom-tile">
-          <img
-            src="../img/zonaCocktail.jpg"
-            alt=""
-            class="img-fluid rounded-3"
-          />
-          <p class="textSomos">Zona cocktail</p>
-        </div>
-        <div class="col-md-6 col-lg-4 custom-tile">
-          <img src="../img/zonaVinos.jpg" alt="" class="img-fluid rounded-3" />
-          <p class="textSomos">Bogega de vinos</p>
-        </div>
-        <div class="col-md-6 col-lg-4 custom-tile">
-          <img src="../img/cerveza.jpg" alt="" class="img-fluid rounded-3" />
-          <p class="textSomos">Cervezas artesanales</p>
-        </div>
-        <div class="col-md-6 col-lg-4 custom-tile">
-          <img src="../img/terracita.jpg" alt="" class="img-fluid rounded-3" />
-          <p class="textSomos">Amplia terraza</p>
+    <div class="container-fluid text-center mt-5">
+      <h3 class="text-center text-decoration-underline">NUESTROS POSTRES</h3>
+      <div class="row mb-5">
+        <div class="col-md-12 mt-5">
+          <div class="row">
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="postres d-flex justify-content-center">
+              <div class="col-md-3 mt-5">
+                <img
+                  src="imagen1.jpg"
+                  alt="Producto 1"
+                  class="img-fluid rounded-3"
+                />
+                <h5><b>Nombre del Producto 1</b></h5>
+                <p>Descripción breve del producto.</p>
+                <p class="price">$9.99</p>
+              </div>
+              <div class="col-md-3 mt-5">
+                <img
+                  src="imagen1.jpg"
+                  alt="Producto 1"
+                  class="img-fluid rounded-3"
+                />
+                <h5><b>Nombre del Producto 1</b></h5>
+                <p>Descripción breve del producto.</p>
+                <p class="price">$9.99</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <nav
