--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -1,80 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IndaReservas</title>
-  <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-</head>
-<body class="pagina4">
-  <div class="container-fluid">
-    <nav class="navbar">
-      <div class="container">
-        <a class="navbar-brand" href="../index.html">
-          <img src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg" alt="" width="130" height="130" class="d-inline-block rounded-circle">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IndaReservas</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    />
+  </head>
+  <body class="pagina4">
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a href="/index.html">
+          <img
+            src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
+            alt="Logo"
+            width="60"
+            height="60"
+            class="d-inline-block align-text-top rounded-circle ms-2"
+          />
         </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasDarkNavbar"
+          aria-controls="offcanvasDarkNavbar"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="offcanvas offcanvas-end text-bg-dark"
+          tabindex="-1"
+          id="offcanvasDarkNavbar"
+          aria-labelledby="offcanvasDarkNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <img
+              src="https://media-cdn.tripadvisor.com/media/photo-s/25/68/e9/5c/gastrobar.jpg"
+              alt="Logo"
+              width="80"
+              height="80"
+              class="d-inline-block align-text-top rounded-circle ms-2"
+            />
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="/index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./quienessomos.html"
+                  >Conocenos un poco mejor</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Carta
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li>
+                    <a class="dropdown-item" href="./carta.html"
+                      >Nuestros platos</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./postres.html">Postres</a>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./cervezas.html">Cervezas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./vinos.html">Vinos</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#">Cocteles</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./reservas.html">Reserva tu mesa</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </nav>
-    <h3 class="text-center text-decoration-underline text-light mt-3">
-      RESERVAS
-    </h3>
-    <form class="row g-3 mt-2">
-      <div class="col-md-auto">
-        <label for="staticEmail2" class="visually-hidden">Email</label>
-        <input type="text" readonly class="form-control-plaintext text-light" id="staticEmail2" value="">
+    <div class="form-container">
+      <div class="formulario">
+        <h3 class="form-title">Reserva tu Mesa</h3>
+        <form class="form">
+          <div class="form-group">
+            <label for="nombreApellido" class="form-label"
+              >Tu Nombre y apellido</label
+            >
+            <input
+              type="text"
+              class="form-input"
+              id="nombreApellido"
+              placeholder="Ejemplo: Juan Pérez"
+            />
+          </div>
+          <div class="form-group">
+            <label for="telefono" class="form-label"
+              >Teléfono de Contacto</label
+            >
+            <input
+              type="tel"
+              class="form-input"
+              id="telefono"
+              placeholder="Ejemplo: 698754125"
+            />
+          </div>
+          <div class="form-group">
+            <label for="numComensales" class="form-label"
+              >Cantidad de Hambrientos</label
+            >
+            <input
+              type="number"
+              class="form-input"
+              id="numComensales"
+              placeholder="Ejemplo: 4"
+            />
+          </div>
+          <div class="form-group">
+            <label for="fecha" class="form-label">Día de la comilona</label>
+            <input type="date" class="form-input" id="fecha" />
+          </div>
+          <div class="form-group">
+            <label for="hora" class="form-label">Hora Aproximada</label>
+            <input type="time" class="form-input" id="hora" />
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn-submit">¡Reserva tu mesa!</button>
+          </div>
+          <div class="mensaje-exito" style="display: none">
+            ¡Reserva realizada con éxito!
+          </div>
+        </form>
       </div>
-      <div class="col-md-auto">
-        <label for="inputPassword2" class="visually-hidden">Password</label>
-        <input type="password" class="form-control" id="inputPassword2" placeholder="Nombre y apellido">
+    </div>
+    <nav
+      class="navbar footer navbar-expand-lg navbar-dark bg-dark fixed-bottom"
+    >
+      <div class="container">
+        <div class="navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Idiomas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/compromiso.html">Compromiso</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </form>
-    <form class="row g-3 mt-2">
-      <div class="col-md-auto">
-        <label for="staticEmail2" class="visually-hidden">Email</label>
-        <input type="text" readonly class="form-control-plaintext text-light" id="staticEmail2" value="">
-      </div>
-      <div class="col-md-auto">
-        <label for="inputPassword2" class="visually-hidden">Password</label>
-        <input type="password" class="form-control" id="inputPassword2" placeholder="Teléfono">
-      </div>
-    </form>
-    <form class="row g-3 mt-2">
-      <div class="col-md-auto">
-        <label for="staticEmail2" class="visually-hidden">Email</label>
-        <input type="text" readonly class="form-control-plaintext text-light" id="staticEmail2" value="">
-      </div>
-      <div class="col-md-auto">
-        <label for="inputPassword2" class="visually-hidden">Password</label>
-        <input type="password" class="form-control" id="inputPassword2" placeholder="Número de comensales">
-      </div>
-    </form>
-    <form class="row g-3 mt-2">
-      <div class="col-md-auto">
-        <label for="staticEmail2" class="visually-hidden">Email</label>
-        <input type="text" readonly class="form-control-plaintext text-light" id="staticEmail2" value="">
-      </div>
-      <div class="col-md-auto">
-        <label for="inputPassword2" class="visually-hidden">Password</label>
-        <input type="password" class="form-control" id="inputPassword2" placeholder="Fecha y hora (dd/mm/aa)">
-      </div>
-      <div class="col-md-auto">
-        <button type="
-        submit" class="btn btn-primary mb-3">Enviar</button>
-      </div>
-    </form>
-    <ul class="col-12 col-md-4 nav justify-content-center mt-5">
-      <li class="nav-item">
-        <a class="nav-link active text-light" aria-current="page" href="../index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-light" href="../pages/reservas.html">Reservas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-light" href="../pages/contacto.html">Contacto</a>
-      </li>
-    </ul>
-  </div>
-</body>
+    </nav>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const formulario = document.querySelector(".form");
+        const mensajeExito = document.querySelector(".mensaje-exito");
+        formulario.addEventListener("submit", function (event) {
+          event.preventDefault();
+          mensajeExito.style.display = "block";
+          formulario.reset();
+        });
+      });
+    </script>
+  </body>
 </html>
-
