--- a/pages/vinos.html
+++ b/pages/vinos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Indacompromiso</title>
+    <title>IndaCarta</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <body class="pagina5">
+  <body class="pagina2 d-flex flex-column justify-content-center">
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a href="/index.html">
@@ -83,85 +83,125 @@
                   Carta
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
-                  <li><a class="dropdown-item" href="./carta.html">Nuestros platos</a></li>
-                  <li><a class="dropdown-item" href="./postres.html">Postres</a></li>
+                  <li>
+                    <a class="dropdown-item" href="./carta.html"
+                      >Nuestros platos</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./postres.html">Postres</a>
+                  </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li><a class="dropdown-item" href="./cervezas.html">Cervezas</a></li>
-                  <li><a class="dropdown-item" href="./vinos.html">Vinos</a></li>
+                  <li>
+                    <a class="dropdown-item" href="./cervezas.html">Cervezas</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="./vinos.html">Vinos</a>
+                  </li>
                   <li><a class="dropdown-item" href="#">Cocteles</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./reservas.html"
-                  >Reserva tu mesa</a
-                >
+                <a class="nav-link" href="./reservas.html">Reserva tu mesa</a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
-      <nav class="navbar">
-        <div class="container">
-          <a class="navbar-brand" href="./index.html"> </a>
-        </div>
-      </nav>
-      <div
-        class="container d-flex justify-content-center align-items-center mt-5"
-      >
-        <div class="row mb-5">
-          <div class="col-md-4 text-center">
+    <div class="container-fluid text-center mt-5">
+      <h3 class="text-center text-decoration-underline">NUESTROS VINOS</h3>
+      <div class="row mb-5">
+        <div class="col-md-12 mt-5">
+          <div class="row">
+            <div class="col-md-3 mt-5">
               <img
-                src="../img/compraLocal.png"
-                class="imgCompromiso img-fluid rounded-circle img-size m-5"
-                alt="Imagen 1"
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
               />
-            </a>
-            <p class="textoCompromiso mt-3">
-              Apoyamos lo local y lo fresco, eligiendo cuidadosamente
-              ingredientes de productores cercanos. Ven y vive una fusión de
-              sabores locales en cada plato. ¡Te esperamos para disfrutar lo
-              mejor de nuestra tierra en cada mordisco!
-            </p>
-          </div>
-          <div class="col-md-4 text-center">
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
               <img
-                src="../img/certiCarne.jpg"
-                class="imgCompromiso img-fluid rounded-circle img-size m-5"
-                alt="Imagen 2"
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
               />
-            </a>
-            <p class="textoCompromiso mt-3">
-              En IndaFood, abrazamos el bienestar animal. Cada plato refleja
-              nuestro compromiso con ingredientes de origen ético. Saborea una
-              experiencia culinaria que combina deliciosos sabores con
-              consciencia hacia los seres vivos y la naturaleza. Tu apoyo nos
-              permite seguir promoviendo un mundo más compasivo a través de cada
-              bocado.
-            </p>
-          </div>
-          <div class="col-md-4 text-center">
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
               <img
-                src="../img/certiCalidad.png"
-                class="imgCompromiso img-fluid rounded-circle img-size m-5"
-                alt="Imagen 3"
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
               />
-            </a>
-            <p class="textoCompromiso mt-3">
-              Nuestros clientes son nuestra pasión. Cada plato de nuestro street
-              food está diseñado para crear sonrisas y satisfacción. Con cada
-              bocado, saborearás la dedicación y el amor que ponemos en nuestra
-              comida. Únete a nosotros para una experiencia culinaria
-              excepcional que deja a nuestros clientes felices y deseando volver
-              por más.
-            </p>
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
+            <div class="col-md-3 mt-5">
+              <img
+                src="imagen1.jpg"
+                alt="Producto 1"
+                class="img-fluid rounded-3"
+              />
+              <h5><b>Nombre del Producto 1</b></h5>
+              <p>Descripción breve del producto.</p>
+              <p class="price">$9.99</p>
+            </div>
           </div>
         </div>
       </div>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+      <nav
+        class="navbar footer navbar-expand-lg navbar-dark bg-dark fixed-bottom"
+      >
         <div class="container">
           <div class="navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
