Implemento funcion para añadir o restar el numero de productos que se ha añadido en la imagen del carrito, tambien añado iconos para añadir o restar productos

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -156,71 +156,224 @@
                 <li class="list-group-item">
                   <span class="dish-name">Carpaccio de Res</span>
                   <span class="dish-price">10.50 €</span>
-                  <button
-                  class="btn btn-sm btn-primary btn-agregar"
-                  data-nombre="Carpaccio de Res"
-                  data-precio="10.50"
-                >
-                  <i class="fas fa-plus"></i> Agregar al carrito
-                </button>
-                <button
-                  class="btn btn-sm btn-danger btn-quitar"
-                  data-nombre="Carpaccio de Res"
-                >
-                  <i class="fas fa-minus"></i> Quitar del carrito
-                </button>
-                
+                  <img
+                    class="agregarBoton btn-icon btn-agregar"
+                    src="../img/mas2.png"
+                    alt="Agregar al carrito"
+                    data-nombre="Carpaccio de Res"
+                    data-precio="10.50"
+                  />
+                  <img
+                    class="eliminarBoton btn-icon btn-quitar"
+                    src="../img/eliminar.png"
+                    alt="Quitar del carrito"
+                    data-nombre="Carpaccio de Res"
+                  />
                 </li>
                 <li class="list-group-item">
                   <span class="dish-name">Ensalada Mediterránea</span>
                   <span class="dish-price">8.75 €</span>
-                  <button class="btn btn-sm btn-primary btn-agregar" data-nombre="Ensalada Mediterránea" data-precio="8.75">Agregar al carrito</button>
+                  <img
+                    class="agregarBoton btn-icon btn-agregar"
+                    src="../img/mas2.png"
+                    alt="Agregar al carrito"
+                    data-nombre="Ensalada Mediterránea"
+                    data-precio="8.75"
+                  />
+                  <img
+                    class="eliminarBoton btn-icon btn-quitar"
+                    src="../img/eliminar.png"
+                    alt="Quitar del carrito"
+                    data-nombre="Ensalada Mediterráneas"
+                  />
                 </li>
                 <li class="list-group-item">
                   <span class="dish-name">Calamares Fritos</span>
                   <span class="dish-price">9.25 €</span>
-                  <button class="btn btn-sm btn-primary btn-agregar" data-nombre="Calamares Fritos" data-precio="9.25">Agregar al carrito</button>
+                  <img
+                    class="agregarBoton btn-icon btn-agregar"
+                    src="../img/mas2.png"
+                    alt="Agregar al carrito"
+                    data-nombre="Calamares Fritos"
+                    data-precio="9.25"
+                  />
+                  <img
+                    class="eliminarBoton btn-icon btn-quitar"
+                    src="../img/eliminar.png"
+                    alt="Quitar del carrito"
+                    data-nombre="Calamares Fritos"
+                  />
                 </li>
                 <li class="list-group-item">
                   <span class="dish-name">Tartar de Atún</span>
                   <span class="dish-price">12.00 €</span>
+                  <img
+                    class="agregarBoton btn-icon btn-agregar"
+                    src="../img/mas2.png"
+                    alt="Agregar al carrito"
+                    data-nombre="Tartar de Atún"
+                    data-precio="12.00"
+                  />
+                  <img
+                    class="eliminarBoton btn-icon btn-quitar"
+                    src="../img/eliminar.png"
+                    alt="Quitar del carrito"
+                    data-nombre="Tartar de Atún"
+                  />
                 </li>
                 <li class="list-group-item">
                   <span class="dish-name">Bruschetta de Tomate</span>
                   <span class="dish-price">6.25 €</span>
-                </li>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Bruschetta de Tomate"
+                  data-precio="6.25"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Bruschetta de Tomate"
+                />
+              </li>
                 <li class="list-group-item">
                   <span class="dish-name">Croquetas de Jamón</span>
                   <span class="dish-price">7.50 €</span>
-                </li>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Croquetas de Jamón"
+                  data-precio="7.50"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Croquetas de Jamón"
+                />
+              </li>
                 <li class="list-group-item">
                   <span class="dish-name">Rollitos de Primavera</span>
                   <span class="dish-price">8.00 €</span>
-                </li>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Rollitos de Primavera"
+                  data-precio="8.00"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Rollitos de Primavera"
+                />
+              </li>
                 <li class="list-group-item">
                   <span class="dish-name">Hummus con Vegetales</span>
                   <span class="dish-price">6.75 €</span>
-                </li>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Hummus con Vegetales"
+                  data-precio="6.75"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Hummus con Vegetales"
+                />
+              </li>
                 <li class="list-group-item">
                   <span class="dish-name">Sopa del Día</span>
                   <span class="dish-price">5.50 €</span>
-                </li>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Sopa del Día"
+                  data-precio="5.50 €"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Sopa del Día"
+                />
+              </li>
                 <li class="list-group-item">
                   <span class="dish-name">Queso de Cabra al Horno</span>
                   <span class="dish-price">9.50 €</span>
-                </li>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Queso de Cabra al Horno"
+                  data-precio="9.50"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Queso de Cabra al Horno"
+                />
+              </li>
                 <li class="list-group-item">
                   <span class="dish-name">Langostinos al Ajillo</span>
                   <span class="dish-price">7.75 €</span>
-                </li>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Langostinos al Ajillo"
+                  data-precio="7.75"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Langostinos al Ajillo"
+                />
+              </li>
                 <li class="list-group-item">
                   <span class="dish-name">Aguacate Relleno</span>
                   <span class="dish-price">7.75 €</span>
-                </li>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Aguacate Relleno"
+                  data-precio="7.75"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Aguacate Relleno"
+                />
+              </li>
                 <li class="list-group-item">
                   <span class="dish-name">Tabla de Quesos</span>
                   <span class="dish-price">13.50 €</span>
-                </li>
+                  <img
+                  class="agregarBoton btn-icon btn-agregar"
+                  src="../img/mas2.png"
+                  alt="Agregar al carrito"
+                  data-nombre="Tabla de Quesos"
+                  data-precio="13.50"
+                />
+                <img
+                  class="eliminarBoton btn-icon btn-quitar"
+                  src="../img/eliminar.png"
+                  alt="Quitar del carrito"
+                  data-nombre="Tabla de Quesos"
+                />
+              </li>
               </ul>
             </div>
           </div>
