Actualizo estilos footer para el menu desplegable

--- a/pages/carta.html
+++ b/pages/carta.html
@@ -31,7 +31,7 @@
             height="60"
             class="d-inline-block align-text-top rounded-circle ms-2"
           />
-        </a>     
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -40,7 +40,7 @@
           aria-controls="offcanvasDarkNavbar"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="">Menú</span>
         </button>
         <div
           class="offcanvas offcanvas-end text-bg-dark"
@@ -74,7 +74,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/quienessomos.html"
+                <a class="nav-link" href="../pages/quienessomos.html"
                   >Conocenos un poco mejor</a
                 >
               </li>
@@ -90,32 +90,30 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark">
                   <li>
-                    <a class="dropdown-item" href="./carta.html"
-                      >Nuestros platos</a
-                    >
+                    <a class="dropdown-item" href="./pages/carta.html">Nuestros platos</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="./postres.html">Postres</a>
+                    <a class="dropdown-item" href="./pages/postres.html">Postres</a>
                   </li>
                   <li>
                     <hr class="dropdown-divider" />
                   </li>
-                  <li>
-                    <a class="dropdown-item" href="./cervezas.html">Cervezas</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="./vinos.html">Vinos</a>
-                  </li>
+                  <li><a class="dropdown-item" href="./pages/cervezas.html">Cervezas</a></li>
+                  <li><a class="dropdown-item" href="./pages/vinos.html">Vinos</a></li>
                   <li><a class="dropdown-item" href="#">Cocteles</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./reservas.html">Reserva tu mesa</a>
+                <a class="nav-link" href="./pages/reservas.html"
+                  >Reserva tu mesa</a
+                >
               </li>
             </ul>
           </div>
         </div>
-        <div class="carrito-info">
+      </div>
+    </nav>
+        <div class="carrito-info mt-3">
           <img
             src="../img/carrito.png"
             alt="Carrito"
@@ -146,7 +144,7 @@
         </div>
     </nav>
     <div class="container">
-      <h1 class="text-center mb-4">CARTA</h1> 
+      <h1 class="text-center mt-0 ">CARTA</h1> 
       <div class="row">
         <div class="col-md-6">
           <div class="card">
